# harp.device.cuttlefish-fip

./: .gitmodules  README.md  device.yml
firmware/: CMakeLists.txt
firmware/inc/: config.h  core1_main.h  cuttlefish_app.h  cuttlefish_fip_app.h  fip_ctrl_queues.h  fip_schedule.h  laser_fip_task.h  pulse_scheduler.h  pulse_train_task.h  pwm_scheduler.h  pwm_task.h  schedule_ctrl_queues.h  scheduled_pwm.h  task.h
firmware/src/: core1_main.cpp  cuttlefish_app.cpp  cuttlefish_fip_app.cpp  fip_schedule.cpp  laser_fip_task.cpp  main.cpp  pulse_scheduler.cpp  pulse_train_task.cpp  pwm_scheduler.cpp  pwm_task.cpp  scheduled_pwm.cpp  task.cpp
firmware/tests/minimal_sequence/: CMakeLists.txt  main.cpp
firmware/tests/pulsetrain/: CMakeLists.txt  main.cpp
firmware/tests/pwm/: CMakeLists.txt  main.cpp
hardware/enclosure/cads/solidworks/: cuttlefish_enclosure.SLDPRT
hardware/ttl_io/: bus_selection.kicad_sch  harp_core_rp2040_w_isolated_usb.kicad_sch  octal_ttl_io.kicad_sch  power_supplies.kicad_sch  ttl_io.kicad_pcb  ttl_io.kicad_pro  ttl_io.kicad_sch
software/bonsai/: device.yml
software/bonsai/Generators/: Generators.csproj
software/bonsai/Interface/: AllenNeuralDynamics.Cuttlefish.sln  AllenNeuralDynamics.CuttlefishFip.sln
software/bonsai/Interface/AllenNeuralDynamics.Cuttlefish/: AllenNeuralDynamics.Cuttlefish.csproj  AsyncDevice.Generated.cs  ConfigurePwm.cs  Device.Generated.cs  HelperMethods.cs
software/bonsai/Interface/AllenNeuralDynamics.Cuttlefish/Properties/: AssemblyInfo.cs
software/bonsai/Interface/AllenNeuralDynamics.CuttlefishFip/: AllenNeuralDynamics.CuttlefishFip.csproj  AsyncDevice.Generated.cs  ConfigureTask.cs  Device.Generated.cs  HelperMethods.cs
software/bonsai/Interface/AllenNeuralDynamics.CuttlefishFip/Properties/: AssemblyInfo.cs
software/pyharp/: app_registers.py  configure_and_check_tasks.py  send_ext_triggered_waveform.py  send_fip_waveform.py  send_fip_waveform_and_disconnect.py  send_fip_waveform_and_get_events.py  send_fip_waveform_and_measure_time_delta.py  send_many_fip_waveforms.py  send_many_waveforms.py  send_waveform.py  stop_vs_abort_tasks.py  toggle_ports.py
